--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <style type="text/css">
       .jumbotron {
-        background-image: url('background.jpg');
+        background-image: url('perth.jpeg');
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
