--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <p class="display-4 d-none d-sm-block">Helping our clients get a fair go</p>
 
         <p><strong>Find Out more about what we do and where we can help:</strong></p>
-        <a href="#" class="btn btn-lg btn-primary"><i class="fa fa-apple" aria-hidden="true"></i> Learn More</a>
-        <a href="#" class="btn btn-lg btn-primary"><i class="fa fa-android" aria-hidden="true"></i> Get In Touch</a>
+        <a href="#section-description" class="btn btn-lg btn-primary"><i class="fa fa-apple" aria-hidden="true"></i> Learn More</a>
+        <a href="https://davis43.typeform.com/to/RXf3kh" class="btn btn-lg btn-primary"><i class="fa fa-android" aria-hidden="true"></i> Get In Touch</a>
       </div>
     </section>
     <div class="container">
