--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
     </nav>
     <section id="section-jumbotron" class="jumbotron jumbotron-fluid text-white d-flex justify-content-center align-items-center">
       <div class="container text-center">
-        <h1 class="display-1 text-primary text-uppercase">Contractr Intelligence</h1>
+        <h1 class="display-1 text-primary text-uppercase">Contract Intel</h1>
         <p class="display-4 d-none d-sm-block">Helping our clients get a fair go</p>
 
-        <p><strong>Find Out more about what we do and where we can help:</strong></p>
+        <p><strong>Find out more about what we do and where we can help:</strong></p>
         <a href="#section-description" class="btn btn-lg btn-primary"><i class="fa fa-apple" aria-hidden="true"></i> Learn More</a>
         <a href="https://davis43.typeform.com/to/RXf3kh" class="btn btn-lg btn-primary"><i class="fa fa-android" aria-hidden="true"></i> Get In Touch</a>
       </div>
